media/templates/transmission/transmission-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "transmission.raspberrypi"
  name: "transmission-ingress"
spec:
  tls:
  - hosts:
    - transmission.raspberrypi
    secretName: transmission-auto-certificate-key-pair
  rules:
  - host: transmission.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-openvpn
            port:
              name: http
